<resources>
    <string name="app_name">GeoQuiz1.0</string>

    <string name="giveup_text">You are giving up! </string>
    <string name="tryagain_text">Try Again! Sydney is the capital city of Australia</string>

    <string name="question_1">Is Perth in Australia?</string>
    <string name="question_2">Is Sydney 8th state of Nepal?</string>
    <string name="question_3">Is Mt. Everest located in Nepal?</string>
    <string name="question_4">Is Gautam Buddha a symbol of peace?</string>
    <string name="true_button">True</string>
    <string name="false_button">False</string>
    <string name="next_question">NEXT</string>
    <string name="prev_question">PREV</string>
    <string name="correct_answer">Correct!</string>
    <string name="incorrect_answer">Incorrect!</string>

</resources>